@@ -1,3 +1,9 @@
+2008-01-11  Anatoly Sokolov <aesok@post.ru>
+
+	* config/avr/avr.c (expand_prologue, expand_epilogue): Don't 
+	save/restore frame pointer register and don't use 'call-prologues' 
+	optimization in function with "OS_task" attribute.
+
 2008-01-11  Eric Botcazou  <ebotcazou@adacore.com>
 
 	PR middle-end/31309
